yunsik/yunsik2/testNodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  type: NodePort
  selector:
    app: webserver
  ports:
    - port: 80
      nodePort: 30000
