yunsik/yunsik2/testService.yaml
apiVersion: v1
kind: Service
metadata:
 name: test-front
spec:
  selector:
    app: test-front
    tier: front
  ports:
   - port: 80
