yunsik/yunsik2/IngressV2.yaml
apiVersion: extensions/v1beta1 # Use extensions/v1beta1 for Kubernetes 1.18 and older
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    # Use this annotation (which must match a service name) to route traffic to HTTP2 backends. 
    alb.ingress.kubernetes.io/conditions.argogrpc: |
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
  name: argocd
  namespace: argocd
spec:
  rules:
  - host: argocd.yunsikhong.shop
    http:
      paths:
      - backend:
          serviceName: argogrpc
          servicePort: 443
        pathType: ImplementationSpecific
      - backend:
          serviceName: argocd-server
          servicePort: 443
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argocd.yunsikhong.shop
